@@ -7,7 +7,7 @@ gitpython==3.1.0; python_version>='3.6'
 pytidylib==0.3.2
 simplejson==3.17.0
 six==1.14.0
-pyfunnel==0.2.2
+pyfunnel==0.3.0
 
 # For documentation and testing.
 setuptools==46.0.0; python_version>='3.6'
