@@ -4,6 +4,10 @@ BuildingsPy Changelog
 Version 2.2.0, xxx, 2020 -- Release 2.2
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 - xxx
+- Added local relative tolerance along y axis by default
+  (https://github.com/lbl-srg/BuildingsPy/pull/396)
+- Fix rounding error issue on start and stop time values
+  (https://github.com/lbl-srg/BuildingsPy/issues/363)
 - For unit tests, ignore zero-size linear and nonlinear equations when comparing statistics
   (https://github.com/lbl-srg/BuildingsPy/issues/406)
 - For unit tests, changed warning to an error if start or end times differ from reference results
